Sidebar Modal working(delete button left)

--- a/client-side/src/App.css
+++ b/client-side/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+.modal-backdrop
+{
+    opacity:0.5 !important;
+}
+
+.fade-modal-show{
+    opacity:0.5 !important;
+}
